# llm-exploring

./: .flake8  README.md  pyproject.toml
llm_exploring/: main.py
llm_exploring/models/: fine_tuning.py  llm.py
llm_exploring/rag/: generator.py
